# quic-cmake

./: CMakeLists.txt  cfi_buildflags.h.inc  debugging_buildflags.h.inc  net_buildflags.h.inc
base/: CMakeLists.txt  allocator_buildflags.h.inc  protected_memory_buildflags.h.inc  synchronization_buildflags.h.inc
cmake/: utils.cmake
crypto/: CMakeLists.txt
net/: CMakeLists.txt
tools/: CMakeLists.txt
url/: CMakeLists.txt
